deployment/k8s/kart-challenge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-template
  namespace: go-template
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-template
  template:
    metadata:
      labels:
        app: go-template
    spec:
      containers:
        - name: go-template
          image: go-template
          imagePullPolicy: IfNotPresent
          command:
            - "sh"
            - "-c"
            - ./go-template --config /mnt/config/config.k8s.yaml
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /mnt/config
              name: config-volume
            - mountPath: /mnt/db
              name: db-migrations-volume
            - mountPath: /mnt/promocodes
              name: promo-codes-volume
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: config-volume
          configMap:
            name: kart-config
        - name: db-migrations-volume
          hostPath:
            path: /mnt/db
            type: Directory
        - name: promo-codes-volume
          hostPath:
            path: /mnt/promocodes
            type: Directory
