deployment/k8s/kart-challenge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-template
  namespace: go-template
spec:
  type: ClusterIP
  selector:
    app: go-template
  ports:
    - port: 80
      targetPort: 8080
