deployment/k8s/kart-challenge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-template-ingress
  namespace: go-template
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
    - host: kart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-template
                port:
                  number: 80
